# anitrend

./: .dockerignore  .env.defaults  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  start-q.sh  start-server.sh  start.sh
.github/: FUNDING.yaml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yaml  feature-request.md  question.md
.github/workflows/: codeql.yml  dependency-review.yml  django-cd.yml  django-ci.yml  django-test.yml  django.yml  first-contribution-greeting.yaml  release-builder.yml  release-drafter.yml
.graphql/: .graphqlconfig  graphql.config.yml  schema.graphql
.graphql/fragements/: series.graphql
.graphql/queries/: queries.graphql
.samples/: crunchy_index_sample.json  crunchy_sample.json  manami_sample.json  skyhook_sample.json  xem_sample.json
api/: admin.py  dependencies.py  exceptions.py  filters.py  models.py  nodes.py  repositories.py  schema.py  tests.py  types.py
api/migrations/: 0001_initial.py
app/: __init__.py  schemas.py  settings.py  urls.py  wsgi.py
app/dependencies/: __init__.py  containers.py
app/graphql/: api.py  schema.py
app/header/: models.py  utils.py
app/main/: apps.py  middleware.py  mixin.py  tests.py
app/modules/: __init__.py
app/settings/: __init__.py  actions.py  common.py  development.py  production.py
common/: __init__.py  contracts.py  helpers.py  models.py  unit_tests.py  utilities.py
config/: admin.py  apps.py  models.py  tests.py
config/data/: repositories.py  schemas.py  sources.py
config/di/: containers.py
config/domain/: entities.py  usecases.py
config/graphql/: queries.py  resolvers.py  types.py
core/: __init__.py  apps.py  caches.py  decorators.py  enums.py  errors.py  helpers.py  middleware.py  mixin.py  models.py  repositories.py  schemas.py  tests.py  usecases.py  utilities.py  utils.py
crunchy/: admin.py  apps.py  tests.py
crunchy/data/: __init__.py  repositories.py  schemas.py  sources.py  tests.py
crunchy/di/: containers.py
crunchy/domain/: tests.py
crunchy/task/: workers.py
data/: __init__.py  model_entities.py  model_schemas.py  remote_sources.py  repositories.py  unit_tests.py
di/: __init__.py  containers.py
docs/: README.md
domain/: __init__.py  use_cases.py
episode/: apps.py
episode/graphql/: types.py
fixtures/crunchy/: index.json
home/: apps.py
manami/: admin.py  apps.py  models.py  tests.py
media/: __init__.py  admin.py  apps.py  choices.py  models.py  tests.py
navigation/: admin.py  apps.py  choices.py  models.py
news/: apps.py
preview/: apps.py
scripts/: manage.py
service/: admin.py  dependencies.py  hooks.py  models.py  tasks.py  tests.py
static/: README.md
templates/: README.md
tests/: README.md  relation_sample.json  xem_sample.json
web/: apps.py  views.py
xem/: admin.py  apps.py  tests.py
(+152 files in other folders)
