[tool.poetry]
name = "anitrend"
version = "0.1.0"
description = ""
authors = ["Maxwell <wax911@users.noreply.github.com>"]
license = "GPL"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
uplink = "0.9.7"
requests = "2.31.0"
marshmallow = "3.21.1"
python-decouple = "3.8"
django-filter = "23.5"
graphene-django = "3.2.1"
graphene-django-extras = { git = "https://github.com/wax911/graphene-django-extras.git", tag = "0.1.0" }
django-cors-headers = "4.3.1"
graphene = "3.3"
django-enumfield = "3.1"
django-graphql-playground = "1.0"
django-extensions = "3.2.3"
django-q2 = "1.6.2"
django = "5.0.4"
dependency_injector = "4.41.0"
serde = "0.9.0"
gunicorn = "22.0.0"
psycopg2-binary = "2.9.9"
reactivex = "4.0.4"
pyxtension = "1.16.10"
ua-parser = "0.18.0"
growthbook = "1.1.0"
rollbar = "1.0.0"
logtail-python = "0.2.10"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
