[tool.poetry]
name = "anitrend"
version = "0.2.1"
description = ""
authors = ["Maxwell <wax911@users.noreply.github.com>"]
license = "GPL"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
uplink = "0.9.7"
requests = "2.32.3"
marshmallow = "3.21.3"
python-decouple = "3.8"
django-filter = "24.2"
graphene-django = "3.2.2"
graphene-django-extras = { git = "https://github.com/anitrend/graphene-django-extras.git", tag = "0.1.1" }
django-cors-headers = "4.3.1"
graphene = "3.3"
django-enumfield = "3.1"
django-graphql-playground = "1.0"
django-extensions = "3.2.3"
django-q2 = "1.6.2"
django = "5.0.6"
dependency_injector = "4.41.0"
serde = "0.9.0"
gunicorn = "22.0.0"
psycopg2-binary = "2.9.9"
reactivex = "4.0.4"
pyxtension = "1.16.10"
ua-parser = "0.18.0"
growthbook = "1.1.0"
logtail-python = "0.3.0"
brotli = "1.1.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
